objects/LBI__AccountExtensionStage__c.object
<CustomObject>
    <description>Staging table holds raw API records before processing.</description>
    <fields>
        <fullName>LBI__Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__FilterByUsed__c</fullName>
        <label>FilterByUsed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recommendations</fullName>
                </value>
                <value>
                    <fullName>NoRecommendations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__Generic100__c</fullName>
        <label>Generic 100</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Generic101__c</fullName>
        <label>Generic 101</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Generic102__c</fullName>
        <label>Generic 102</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeAccountId__c</fullName>
        <description>This matches LEAccountExternalID in the API</description>
        <label>Lattice Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ProcessingStatus__c</fullName>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Processed</fullName>
                    <default>true</default>
                    <label>Not Processed</label>
                </value>
                <value>
                    <fullName>Processed - Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lattice Account Extension Stage</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__ProcessingStatus__c</columns>
        <columns>LBI__Account__c</columns>
        <columns>LBI__Contact__c</columns>
        <columns>LBI__ExternalId__c</columns>
        <columns>LBI__FilterByUsed__c</columns>
        <columns>LBI__LatticeAccountId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LBI__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AES-{000000}</displayFormat>
        <label>Account Extension Stage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Account Extension Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>